# simple-tensorrt-deploy

./: README.md  config.yaml
cpp/: CMakeLists.txt  common.cpp  lenet.cpp
cpp/includes/: common.h
depoly/: main.cpp  model.cpp
depoly/includes/: model.h
pytorch/: export_onnx.py  train.py
tools/: inference.py  lenet.py
